fixed overflow text on post view

--- a/resources/css/post.css
+++ b/resources/css/post.css
@@ -140,6 +140,11 @@ div.artist-list-item>a {
     transition: all .15s ease-out;
 
 }
+.theme-info{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 .post-song:hover {
     transform: scale(1.015);
